--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.23.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-materialize": "^3.4.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
